--- a/pages/19974.html
+++ b/pages/19974.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      fields and quanta - table in nLab
+      Shigeki Sugimoto in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      fields and quanta - table
+      Shigeki Sugimoto
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4664/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9341/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -311,205 +311,67 @@ margin-left: 0em;
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
-<p><a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field (physics)</a></p>
+<ul>
+<li><a href="http://www2.yukawa.kyoto-u.ac.jp/~shigeki.sugimoto/index_e.html">webpage</a></li>
+</ul>
 
-<p><strong><a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model of particle physics</a></strong></p>
-
-<p><strong><a class="existingWikiWord" href="/nlab/show/force">force</a> <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field</a> <a class="existingWikiWord" href="/nlab/show/gauge+field">gauge</a> <a class="existingWikiWord" href="/nlab/show/bosons">bosons</a></strong></p>
+<h2 id="selected_writings">selected writings</h2>
 
 <ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/photon">photon</a> - <a class="existingWikiWord" href="/nlab/show/electromagnetic+field">electromagnetic field</a> (abelian <a class="existingWikiWord" href="/nlab/show/Yang-Mills+field">Yang-Mills field</a>)</p>
+<li id="SakaiSugimoto04">
+<p><a class="existingWikiWord" href="/nlab/show/Tadakatsu+Sakai">Tadakatsu Sakai</a>, <a class="existingWikiWord" href="/nlab/show/Shigeki+Sugimoto">Shigeki Sugimoto</a>, <em>Low energy hadron physics in holographic QCD</em>, Prog.Theor.Phys.113:843-882, 2005 (<a href="https://arxiv.org/abs/hep-th/0412141">arXiv:hep-th/0412141</a>)</p>
+</li>
+
+<li id="SakaiSugimoto05">
+<p><a class="existingWikiWord" href="/nlab/show/Tadakatsu+Sakai">Tadakatsu Sakai</a>, <a class="existingWikiWord" href="/nlab/show/Shigeki+Sugimoto">Shigeki Sugimoto</a>, <em>More on a holographic dual of QCD</em>, Prog.Theor.Phys.114:1083-1118, 2005 (<a href="https://arxiv.org/abs/hep-th/0507073">arXiv:hep-th/0507073</a>)</p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/W-boson">W</a>, <a class="existingWikiWord" href="/nlab/show/Z-boson">Z</a>, <a class="existingWikiWord" href="/nlab/show/B-boson">B-boson</a> - <a class="existingWikiWord" href="/nlab/show/electroweak+field">electroweak field</a> (<a class="existingWikiWord" href="/nlab/show/Yang-Mills+field">Yang-Mills field</a>)</p>
+<p>Hiroyuki Hata, <a class="existingWikiWord" href="/nlab/show/Tadakatsu+Sakai">Tadakatsu Sakai</a>, <a class="existingWikiWord" href="/nlab/show/Shigeki+Sugimoto">Shigeki Sugimoto</a>, Shinichiro Yamato, <em>Baryons from instantons in holographic QCD</em>, Prog.Theor.Phys.117:1157, 2007 (<a href="https://arxiv.org/abs/hep-th/0701280">arXiv:hep-th/0701280</a>)</p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/gluon">gluon</a> - <a class="existingWikiWord" href="/nlab/show/strong+nuclear+force">strong nuclear force</a> (<a class="existingWikiWord" href="/nlab/show/Yang-Mills+field">Yang-Mills field</a>)</p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/graviton">graviton</a> - <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field</a> of <a class="existingWikiWord" href="/nlab/show/gravity">gravity</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/infraparticle">infraparticle</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Koji+Hashimoto">Koji Hashimoto</a>, <a class="existingWikiWord" href="/nlab/show/Tadakatsu+Sakai">Tadakatsu Sakai</a>, <a class="existingWikiWord" href="/nlab/show/Shigeki+Sugimoto">Shigeki Sugimoto</a>, <em>Holographic Baryons : Static Properties and Form Factors from Gauge/String Duality</em>, Prog.Theor.Phys.120:1093-1137, 2008 (<a href="https://arxiv.org/abs/0806.3122">arXiv:0806.3122</a>)</p>
 </li>
 </ul>
 
-<p><strong><a class="existingWikiWord" href="/nlab/show/scalar+field">scalar</a> <a class="existingWikiWord" href="/nlab/show/bosons">bosons</a></strong></p>
-
-<ul>
-<li><a class="existingWikiWord" href="/nlab/show/Higgs+boson">Higgs boson</a>, <a class="existingWikiWord" href="/nlab/show/inflaton">inflaton</a> (<a class="existingWikiWord" href="/nlab/show/scalar+field">scalar field</a>)</li>
-</ul>
-
-<p><strong><a class="existingWikiWord" href="/nlab/show/matter">matter</a> <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field</a> <a class="existingWikiWord" href="/nlab/show/fermions">fermions</a></strong> (<a class="existingWikiWord" href="/nlab/show/spinors">spinors</a>, <a class="existingWikiWord" href="/nlab/show/Dirac+fields">Dirac fields</a>)</p>
+<h2 id="related_lab_entries">related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/electron">electron</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/AdS-QCD+correspondence">AdS-QCD correspondence</a></p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/quark">quark</a></p>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/top+quark">top quark</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/skyrmion">skyrmion</a></p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/bottom+quark">bottom quark</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/meson">meson</a>, <a class="existingWikiWord" href="/nlab/show/baryon">baryon</a></p>
 </li>
 </ul>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/neutrino">neutrino</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/muon">muon</a></p>
-</li>
-</ul>
-
-<p><strong><a class="existingWikiWord" href="/nlab/show/hadron">hadron</a></strong> (<a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> of the above <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a>)</p>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/meson">meson</a></p>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/pion">pion</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/B-meson">B-meson</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/baryon">baryon</a></p>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/proton">proton</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/neutron">neutron</a></p>
-</li>
-</ul>
-</li>
-</ul>
-
-<p><strong><a class="existingWikiWord" href="/nlab/show/solitons">solitons</a></strong></p>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/caloron">caloron</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/Skyrmion">Skyrmion</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/instanton">instanton</a></p>
-</li>
-</ul>
-
-<p><strong><a class="existingWikiWord" href="/nlab/show/MSSM">minimally extended supersymmetric standard model</a></strong></p>
-
-<p><strong><a class="existingWikiWord" href="/nlab/show/superpartners">superpartners</a></strong></p>
-
-<p>bosinos:</p>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/gravitino">gravitino</a> - <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field</a> of <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a> (<a class="existingWikiWord" href="/nlab/show/Rarita-Schwinger+field">Rarita-Schwinger field</a>)</p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/gaugino">gaugino</a> - <a class="existingWikiWord" href="/nlab/show/super+Yang-Mills+theory">super Yang-Mills field</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/gluino">gluino</a></p>
-</li>
-</ul>
-
-<p><a class="existingWikiWord" href="/nlab/show/sfermions">sfermions</a>:</p>
-
-<ul>
-<li><a class="existingWikiWord" href="/nlab/show/squark">squark</a></li>
-</ul>
-
-<p><strong>Exotica</strong></p>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/preon">preon</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/axion">axion</a>, <a class="existingWikiWord" href="/nlab/show/dilaton">dilaton</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/monopole">monopole</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/dual+graviton">dual graviton</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/leptoquark">leptoquark</a></p>
-</li>
-</ul>
-
-<p><strong><a class="existingWikiWord" href="/nlab/show/auxiliary+fields">auxiliary fields</a></strong></p>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/ghost+field">ghost field</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/antifield">antifield</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/antighost+field">antighost field</a>, <a class="existingWikiWord" href="/nlab/show/Nakanishi-Lautrup+field">Nakanishi-Lautrup field</a></p>
-</li>
-</ul>
-</body></html>
+<div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on December  3, 2018 at 08:57:26.
-  See the <a href="https://ncatlab.org/nlab/history/fields and quanta - table" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on December  3, 2018 at 08:00:50.
+  See the <a href="https://ncatlab.org/nlab/history/Shigeki Sugimoto" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/fields+and+quanta+-+table" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fields+and+quanta+-+table/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/fields+and+quanta+-+table" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fields+and+quanta+-+table" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/fields and quanta - table/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Shigeki+Sugimoto" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Shigeki Sugimoto/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/fields+and+quanta+-+table" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Shigeki+Sugimoto" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/fields+and+quanta+-+table" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Shigeki+Sugimoto" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/fields+and+quanta+-+table" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Shigeki+Sugimoto" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
