--- a/pages/19976.html
+++ b/pages/19976.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      fields and quanta - table in nLab
+      glueball in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      fields and quanta - table
+      glueball
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4664/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9343/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -309,8 +309,16 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Contents</title></head>
 <body>
+<div class="rightHandSide">
+<div class="toc clickDown" tabindex="0">
+<h3 id="context">Context</h3>
+
+<h4 id="fields_and_quanta">Fields and quanta</h4>
+
+<div class="hide"><div>
+
 <p><a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field (physics)</a></p>
 
 <p><strong><a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model of particle physics</a></strong></p>
@@ -488,28 +496,61 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/antighost+field">antighost field</a>, <a class="existingWikiWord" href="/nlab/show/Nakanishi-Lautrup+field">Nakanishi-Lautrup field</a></p>
 </li>
 </ul>
+</div></div>
+</div>
+</div>
+
+<h1 id="contents">Contents</h1>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
+<h2 id="idea">Idea</h2>
+
+<p>In <a class="existingWikiWord" href="/nlab/show/quantum+chromodynamics">quantum chromodynamics</a>, in fact already in pure <a class="existingWikiWord" href="/nlab/show/special+unitary+group">SU(3)</a> <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a>, a <em>glueball</em> is a <a class="existingWikiWord" href="/nlab/show/bound+state">bound state</a> of (just) <a class="existingWikiWord" href="/nlab/show/gluons">gluons</a> (a kind of <a class="existingWikiWord" href="/nlab/show/confinement">confinement</a>).</p>
+
+<p>Glueballs are hard to detect in <a class="existingWikiWord" href="/nlab/show/experiment">experiment</a> but their existence is confirmed by <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a>, also by the <a class="existingWikiWord" href="/nlab/show/AdS-QCD+correspondence">AdS-QCD correspondence</a> (see there). According to <a href="#Greensite11">Greensite 11, section 8.5</a>:</p>
+
+<blockquote>
+<p>The <a class="existingWikiWord" href="/nlab/show/caloron">caloron</a> idea is probably the most promising current version of <a class="existingWikiWord" href="/nlab/show/monopole">monopole</a> <a class="existingWikiWord" href="/nlab/show/confinement">confinement</a> in pure non-abelian gauge theories, but it is basically (in certain <a class="existingWikiWord" href="/nlab/show/gauge+fixing">gauges</a>) a superposition of <a class="existingWikiWord" href="/nlab/show/monopoles">monopoles</a> with spherically symmetric abelian fields, and this leads to the same questions raised in connection with monopole Coulomb gases.</p>
+</blockquote>
+
+<h2 id="references">References</h2>
+
+<ul>
+<li id="Greensite11">Jeff Greensite, <em>An Introduction to the Confinement Problem</em>, Lecture Notes in Physics, Volume 821, 2011 (<a href="https://link.springer.com/book/10.1007%2F978-3-642-14382-3">doi:10.1007/978-3-642-14382-3</a>)</li>
+</ul>
+
+<p>See also</p>
+
+<ul>
+<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Glueball">Glueball</a></em></li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on December  3, 2018 at 08:57:26.
-  See the <a href="https://ncatlab.org/nlab/history/fields and quanta - table" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on December  3, 2018 at 08:49:22.
+  See the <a href="https://ncatlab.org/nlab/history/glueball" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/fields+and+quanta+-+table" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fields+and+quanta+-+table/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/fields+and+quanta+-+table" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fields+and+quanta+-+table" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/fields and quanta - table/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/glueball" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/glueball/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/fields+and+quanta+-+table" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/glueball" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/fields+and+quanta+-+table" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/glueball" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/fields+and+quanta+-+table" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/glueball" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
