--- a/pages/5881.html
+++ b/pages/5881.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -999,6 +999,22 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p><strong><a class="existingWikiWord" href="/nlab/show/solitons">solitons</a></strong></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/caloron">caloron</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Skyrmion">Skyrmion</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/instanton">instanton</a></p>
+</li>
+</ul>
+
 <p><strong><a class="existingWikiWord" href="/nlab/show/MSSM">minimally extended supersymmetric standard model</a></strong></p>
 
 <p><strong><a class="existingWikiWord" href="/nlab/show/superpartners">superpartners</a></strong></p>
@@ -1082,6 +1098,8 @@ margin-left: 0em;
 
 <p>A <a class="existingWikiWord" href="/nlab/show/vector+boson">vector boson</a> in the <a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model of particle physics</a>.</p>
 
+<p>The <a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> of gluons are <a class="existingWikiWord" href="/nlab/show/glueballs">glueballs</a>.</p>
+
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
@@ -1107,14 +1125,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  3, 2018 at 07:28:00.
+  Last revised on December  3, 2018 at 08:45:55.
   See the <a href="https://ncatlab.org/nlab/history/gluon" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/gluon" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/gluon/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/gluon" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/gluon" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/gluon" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/gluon/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/gluon" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/gluon" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/gluon/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
