--- a/pages/6322.html
+++ b/pages/6322.html
@@ -1483,6 +1483,12 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a>:</p>
+
+<p><a class="existingWikiWord" href="/nlab/show/glueballs">glueballs</a>, <a class="existingWikiWord" href="/nlab/show/hadrons">hadrons</a> (<a class="existingWikiWord" href="/nlab/show/mesons">mesons</a>, <a class="existingWikiWord" href="/nlab/show/baryons">baryons</a>)</p>
+</li>
+
+<li>
 <p><a class="existingWikiWord" href="/nlab/show/colour+charge">colour charge</a>, <a class="existingWikiWord" href="/nlab/show/flavour+%28particle+physics%29">flavour (particle physics)</a></p>
 </li>
 
@@ -1604,14 +1610,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  3, 2018 at 07:29:05.
+  Last revised on December  3, 2018 at 08:47:52.
   See the <a href="https://ncatlab.org/nlab/history/QCD" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/QCD" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/QCD/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/QCD" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/QCD" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/QCD" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/QCD/21" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(21 revisions)</span> | <a href="/nlab/show/diff/QCD" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/QCD" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/QCD/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
