--- a/pages/10114.html
+++ b/pages/10114.html
@@ -317,7 +317,12 @@ margin-left: 0em;
 
 <h4 id="physics">Physics</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong>, <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>, <a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p><h2 id="surveys_textbooks_and_lecture_notes">Surveys, textbooks and lecture notes</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong>, <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>, <a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p>
+
+<h2 id="surveys_textbooks_and_lecture_notes">Surveys, textbooks and lecture notes</h2>
+
+<ul>
 <li>
 <p><em><a class="existingWikiWord" href="/nlab/show/higher+category+theory+and+physics">(higher) category theory and physics</a></em></p>
 </li>
@@ -329,7 +334,13 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/books+and+reviews+in+mathematical+physics">books and reviews</a>, <a class="existingWikiWord" href="/nlab/show/physics+resources">physics resources</a></p>
 </li>
-</ul><hr /><p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">model (physics)</a></p><p><a class="existingWikiWord" href="/nlab/show/experiment">experiment</a>, <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/computable+physics">computable physics</a></p><ul>
+</ul>
+<hr />
+<p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">model (physics)</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/experiment">experiment</a>, <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/computable+physics">computable physics</a></p>
+
+<ul>
 <li>
 <p><strong><a class="existingWikiWord" href="/nlab/show/mechanics">mechanics</a></strong></p>
 
@@ -881,11 +892,12 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Riemann+hypothesis+and+physics">Riemann hypothesis and physics</a></li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/physicscontents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -893,14 +905,68 @@ margin-left: 0em;
 <div class='maruku_toc'>
 <ul>
 <li><a href='#idea'>Idea</a></li>
+<li><a href='#properties'>Properties</a></li>
+<ul>
+<li><a href='#ConceptualizationAndComputationInAdSQCD'>Conceptualization and computation in AdS/QCD</a></li>
+</ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
+<ul>
+<li><a href='#general'>General</a></li>
+<li><a href='#in_wittensakaisugimoto_model_for_adsqcd'>In Witten-Sakai-Sugimoto model for AdS-QCD</a></li>
+</ul>
 </ul>
 </div>
 
 <h2 id="idea">Idea</h2>
 
 <p>In the <a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model of particle physics</a> (specifically in <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a>), a <em>baryon</em> is <a class="existingWikiWord" href="/nlab/show/bound+state">bound state</a> of three <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a> via the <a class="existingWikiWord" href="/nlab/show/strong+nuclear+force">strong nuclear force</a>. Baryons are the “heavy” types of <a class="existingWikiWord" href="/nlab/show/hadrons">hadrons</a>, the other being the <a class="existingWikiWord" href="/nlab/show/mesons">mesons</a>. Examples of hadrons are <a class="existingWikiWord" href="/nlab/show/protons">protons</a> and <a class="existingWikiWord" href="/nlab/show/neutrons">neutrons</a>.</p>
+
+<h2 id="properties">Properties</h2>
+
+<h3 id="ConceptualizationAndComputationInAdSQCD">Conceptualization and computation in AdS/QCD</h3>
+
+<p>In the <a class="existingWikiWord" href="/nlab/show/Witten-Sakai-Sugimoto+model">Witten-Sakai-Sugimoto model</a> for <a class="existingWikiWord" href="/nlab/show/non-perturbative+effect">strongly coupled</a> <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> via an <a class="existingWikiWord" href="/nlab/show/intersecting+D-brane+model">intersecting D-brane model</a>, the <a class="existingWikiWord" href="/nlab/show/hadrons">hadrons</a> in <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> correspond to <a class="existingWikiWord" href="/nlab/show/string+theory">string-theoretic</a>-phenomena in an ambient <a class="existingWikiWord" href="/nlab/show/bulk+field+theory">bulk field theory</a> on an approximately <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spacetime">anti de Sitter spacetime</a>:</p>
+
+<ol>
+<li>
+<p>the <a class="existingWikiWord" href="/nlab/show/mesons">mesons</a> (<a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> of 2 <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a>) correspond to <a class="existingWikiWord" href="/nlab/show/open+strings">open strings</a> in the bulk, whose two endpoints on the <a class="existingWikiWord" href="/nlab/show/asymptotic+boundary">asymptotic boundary</a> correspond to the two <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a>;</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/baryons">baryons</a> (<a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>N</mi> <mi>c</mi></msub></mrow><annotation encoding="application/x-tex">N_c</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a>) appear in two different but equivalent (<a href="#Sugimoto16">Sugimoto 16, 15.4.1</a>) guises:</p>
+
+<ol>
+<li>
+<p>as <a class="existingWikiWord" href="/nlab/show/wrapped+brane">wrapped</a> <a class="existingWikiWord" href="/nlab/show/D4-branes">D4-branes</a> with <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>N</mi> <mi>c</mi></msub></mrow><annotation encoding="application/x-tex">N_c</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/open+strings">open strings</a> connecting them to the <a class="existingWikiWord" href="/nlab/show/D8-brane">D8-brane</a></p>
+
+<p>(<a href="#Witten98b">Witten 98b</a>, <a href="#GrossOoguri98">Gross-Ooguri 98</a>)</p>
+</li>
+
+<li>
+<p>as <a class="existingWikiWord" href="/nlab/show/skyrmions">skyrmions</a></p>
+
+<p>(<a href="#SakaiSugimoto04">Sakai-Sugimoto 04, section 5.2</a>, <a href="#SakaiSugimoto05">Sakai-Sugimoto 05, section 3.3</a>, see <a href="#Bartolini17">Bartolini 17</a>).</p>
+</li>
+</ol>
+</li>
+</ol>
+
+<p>For review see <a href="#Sugimoto16">Sugimoto 16</a>, also <a href="#Rebhan14">Rebhan 14, around (18)</a>.</p>
+<center>
+<img src="https://ncatlab.org/nlab/files/BaryonsAsD4Branes.jpg" width="700" />
+</center>
+<blockquote>
+<p>graphics grabbed from <a href="#Sugimoto16">Sugimoto 16</a></p>
+</blockquote>
+
+<p>This produces <a class="existingWikiWord" href="/nlab/show/baryon">baryon</a> <a class="existingWikiWord" href="/nlab/show/mass">mass</a> spectra with moderate quantitative agreement with <a class="existingWikiWord" href="/nlab/show/experiment">experiment</a> (<a href="#HSSY07">HSSY 07</a>):</p>
+<center>
+<img src="https://ncatlab.org/nlab/files/BaryonSpectrumInSakaiSugimoto.jpg" width="700" />
+</center>
+<blockquote>
+<p>graphics grabbed from <a href="#Sugimoto16">Sugimoto 16</a></p>
+</blockquote>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -916,10 +982,48 @@ margin-left: 0em;
 
 <h2 id="references">References</h2>
 
+<h3 id="general">General</h3>
+
 <p>See also</p>
 
 <ul>
 <li>Wikipedia, <em><a href="http://en.wikipedia.org/wiki/Baryon">Baryon</a></em></li>
+</ul>
+
+<h3 id="in_wittensakaisugimoto_model_for_adsqcd">In Witten-Sakai-Sugimoto model for AdS-QCD</h3>
+
+<ul>
+<li id="Witten98b">
+<p><a class="existingWikiWord" href="/nlab/show/Edward+Witten">Edward Witten</a>, <em>Baryons And Branes In Anti de Sitter Space</em>, JHEP 9807:006, 1998 (<a href="https://arxiv.org/abs/hep-th/9805112">arXiv:hep-th/9805112</a>)</p>
+</li>
+
+<li id="GrossOoguri98">
+<p><a class="existingWikiWord" href="/nlab/show/David+Gross">David Gross</a>, <a class="existingWikiWord" href="/nlab/show/Hirosi+Ooguri">Hirosi Ooguri</a>, <em>Aspects of Large N Gauge Theory Dynamics as Seen by String Theory</em>, Phys.Rev.D58:106002,1998 (<a href="https://arxiv.org/abs/hep-th/9805129">arXiv:hep-th/9805129</a>)</p>
+</li>
+
+<li id="SakaiSugimoto04">
+<p><a class="existingWikiWord" href="/nlab/show/Tadakatsu+Sakai">Tadakatsu Sakai</a>, <a class="existingWikiWord" href="/nlab/show/Shigeki+Sugimoto">Shigeki Sugimoto</a>, <em>Low energy hadron physics in holographic QCD</em>, Prog.Theor.Phys.113:843-882, 2005 (<a href="https://arxiv.org/abs/hep-th/0412141">arXiv:hep-th/0412141</a>)</p>
+</li>
+
+<li id="SakaiSugimoto05">
+<p><a class="existingWikiWord" href="/nlab/show/Tadakatsu+Sakai">Tadakatsu Sakai</a>, <a class="existingWikiWord" href="/nlab/show/Shigeki+Sugimoto">Shigeki Sugimoto</a>, <em>More on a holographic dual of QCD</em>, Prog.Theor.Phys.114:1083-1118, 2005 (<a href="https://arxiv.org/abs/hep-th/0507073">arXiv:hep-th/0507073</a>)</p>
+</li>
+
+<li id="HSSY07">
+<p>Hiroyuki Hata, <a class="existingWikiWord" href="/nlab/show/Tadakatsu+Sakai">Tadakatsu Sakai</a>, <a class="existingWikiWord" href="/nlab/show/Shigeki+Sugimoto">Shigeki Sugimoto</a>, Shinichiro Yamato, <em>Baryons from instantons in holographic QCD</em>, Prog.Theor.Phys.117:1157, 2007 (<a href="https://arxiv.org/abs/hep-th/0701280">arXiv:hep-th/0701280</a>)</p>
+</li>
+</ul>
+
+<p>Review</p>
+
+<ul>
+<li id="Rebhan14">
+<p>Anton Rebhan, <em>The Witten-Sakai-Sugimoto model: A brief review and some recent results</em>, 3rd International Conference on New Frontiers in Physics, Kolymbari, Crete, 2014 (<a href="https://arxiv.org/abs/1410.8858">arXiv:1410.8858</a>)</p>
+</li>
+
+<li id="Sugimoto16">
+<p><a class="existingWikiWord" href="/nlab/show/Shigeki+Sugimoto">Shigeki Sugimoto</a>, <em>Skyrmion and String theory</em>, chapter 15 in M. Rho, Ismail Zahed (eds.) <em>The Multifaceted Skyrmion</em>, World Scientific 2016 (<a href="https://doi.org/10.1142/9710">doi:10.1142/9710</a>)</p>
+</li>
 </ul>
 </body></html>
 
@@ -927,14 +1031,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 30, 2018 at 08:43:24.
+  Last revised on December  3, 2018 at 09:07:10.
   See the <a href="https://ncatlab.org/nlab/history/baryon" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/baryon" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/baryon/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/baryon" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/baryon" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/baryon" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/baryon/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/baryon" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/baryon" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/baryon/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
