--- a/pages/19975.html
+++ b/pages/19975.html
@@ -353,6 +353,8 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class="existingWikiWord" href="/nlab/show/hadron">hadron</a>,</p>
+
 <p><a class="existingWikiWord" href="/nlab/show/meson">meson</a>, <a class="existingWikiWord" href="/nlab/show/baryon">baryon</a></p>
 </li>
 </ul>
@@ -362,14 +364,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on December  3, 2018 at 08:01:58.
+  Last revised on December  3, 2018 at 09:02:43.
   See the <a href="https://ncatlab.org/nlab/history/Tadakatsu Sakai" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Tadakatsu+Sakai" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Tadakatsu+Sakai" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Tadakatsu+Sakai/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Tadakatsu+Sakai" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Tadakatsu+Sakai" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Tadakatsu Sakai/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
