--- a/pages/16968.html
+++ b/pages/16968.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9344/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -317,11 +317,25 @@ margin-left: 0em;
 
 <h4 id="stable_homotopy_theory">Stable Homotopy theory</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/stable+homotopy+theory">stable homotopy theory</a></strong></p><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/stable+homotopy+theory">stable homotopy theory</a></strong></p>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/homological+algebra">homological algebra</a>, <a class="existingWikiWord" href="/nlab/show/higher+algebra">higher algebra</a></li>
-</ul><p><em><a class="existingWikiWord" href="/nlab/show/Introduction+to+Stable+Homotopy+Theory">Introduction</a></em></p><h1 id="ingredients">Ingredients</h1><ul>
+</ul>
+
+<p><em><a class="existingWikiWord" href="/nlab/show/Introduction+to+Stable+Homotopy+Theory">Introduction</a></em></p>
+
+<h1 id="ingredients">Ingredients</h1>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/homotopy+theory">homotopy theory</a></li>
-</ul><h1 id="contents">Contents</h1><ul>
+</ul>
+
+<h1 id="contents">Contents</h1>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/loop+space+object">loop space object</a></p>
 </li>
@@ -391,15 +405,30 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p><a href="/nlab/edit/stable+homotopy+theory+-+contents">Edit this sidebar</a></p>
-</div></div>
+</div></div></div>
 
 <h4 id="representation_theory">Representation theory</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/representation+theory">representation theory</a></strong></p><p><strong><a class="existingWikiWord" href="/nlab/show/geometric+representation+theory">geometric representation theory</a></strong></p><h2 id="ingredients">Ingredients</h2><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/representation+theory">representation theory</a></strong></p>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/geometric+representation+theory">geometric representation theory</a></strong></p>
+
+<h2 id="ingredients">Ingredients</h2>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/linear+algebra">linear algebra</a>, <a class="existingWikiWord" href="/nlab/show/algebra">algebra</a>, <a class="existingWikiWord" href="/nlab/show/higher+algebra">higher algebra</a></li>
-</ul><h2 id="definitions">Definitions</h2><p><a class="existingWikiWord" href="/nlab/show/representation">representation</a>, <a class="existingWikiWord" href="/nlab/show/2-representation">2-representation</a>, <a class="existingWikiWord" href="/nlab/show/%E2%88%9E-representation">∞-representation</a></p><ul>
+</ul>
+
+<h2 id="definitions">Definitions</h2>
+
+<p><a class="existingWikiWord" href="/nlab/show/representation">representation</a>, <a class="existingWikiWord" href="/nlab/show/2-representation">2-representation</a>, <a class="existingWikiWord" href="/nlab/show/%E2%88%9E-representation">∞-representation</a></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/group">group</a>, <a class="existingWikiWord" href="/nlab/show/%E2%88%9E-group">∞-group</a></p>
 </li>
@@ -455,7 +484,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/module+algebra">module algebra</a>, <a class="existingWikiWord" href="/nlab/show/comodule+algebra">comodule algebra</a>, <a class="existingWikiWord" href="/nlab/show/Hopf+action">Hopf action</a>, <a class="existingWikiWord" href="/nlab/show/measuring">measuring</a></p>
 </li>
-</ul><h2 id="geometric_representation_theory">Geometric representation theory</h2><ul>
+</ul>
+
+<h2 id="geometric_representation_theory">Geometric representation theory</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/D-module">D-module</a>, <a class="existingWikiWord" href="/nlab/show/perverse+sheaf">perverse sheaf</a>,</p>
 </li>
@@ -479,7 +512,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/reconstruction+theorems">reconstruction theorems</a></p>
 </li>
-</ul><h2 id="theorems">Theorems</h2><ul>
+</ul>
+
+<h2 id="theorems">Theorems</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Borel-Weil-Bott+theorem">Borel-Weil-Bott theorem</a></p>
 </li>
@@ -495,14 +532,35 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/BBDG+decomposition+theorem">BBDG decomposition theorem</a></p>
 </li>
-</ul><div>
+</ul>
+<div>
 <p><a href="/nlab/edit/representation+theory+-+contents">Edit this sidebar</a></p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#definition">Definition</a><ul><li><a href="#as_a_spectrum_indexed_on_a_universe">As a spectrum indexed on a <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-universe</a></li><li><a href="#as_an_orthogonal_spectrum">As an orthogonal spectrum</a></li></ul></li><li><a href="#Properties">Properties</a><ul><li><a href="#ROGDegrees"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>RO</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">RO(G)</annotation></semantics></math>-degrees</a></li><li><a href="#relation_between_genuine_and_bredonequivariant_suspension">Relation between genuine and Bredon-equivariant suspension</a></li></ul></li><li><a href="#examples">Examples</a><ul><li><a href="#equivariant_homotopy_groups_and_fixed_point_spectra">Equivariant homotopy groups and fixed point spectra</a></li></ul></li><li><a href="#references">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#definition'>Definition</a></li>
+<ul>
+<li><a href='#as_a_spectrum_indexed_on_a_universe'>As a spectrum indexed on a <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-universe</a></li>
+<li><a href='#as_an_orthogonal_spectrum'>As an orthogonal spectrum</a></li>
+</ul>
+<li><a href='#Properties'>Properties</a></li>
+<ul>
+<li><a href='#ROGDegrees'><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>RO</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">RO(G)</annotation></semantics></math>-degrees</a></li>
+<li><a href='#relation_between_genuine_and_bredonequivariant_suspension'>Relation between genuine and Bredon-equivariant suspension</a></li>
+</ul>
+<li><a href='#examples'>Examples</a></li>
+<ul>
+<li><a href='#equivariant_homotopy_groups_and_fixed_point_spectra'>Equivariant homotopy groups and fixed point spectra</a></li>
+</ul>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
 <p>The generalization of the concept of <a class="existingWikiWord" href="/nlab/show/suspension+spectrum">suspension spectrum</a> from <a class="existingWikiWord" href="/nlab/show/stable+homotopy+theory">stable homotopy theory</a> to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/equivariant+stable+homotopy+theory">equivariant stable homotopy theory</a>.</p>
@@ -598,14 +656,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 16, 2018 at 09:56:26.
+  Last revised on December  4, 2018 at 00:45:49.
   See the <a href="https://ncatlab.org/nlab/history/equivariant suspension spectrum" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/equivariant+suspension+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+suspension+spectrum/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/equivariant+suspension+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+suspension+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/equivariant+suspension+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+suspension+spectrum/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/equivariant+suspension+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+suspension+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/equivariant suspension spectrum/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
